force-app/main/default/objects/Support_Level_Mapping__mdt/Support_Level_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Create a Custom Metadata Type with Relationship Fields</description>
    <label>Support Level Mapping</label>
    <pluralLabel>Support Level Mapping</pluralLabel>
</CustomObject>