force-app/main/default/objects/Support_Level_Mapping__mdt/fields/Support_Tier__c.field-meta.xml
<CustomField>
    <fullName>Support_Tier__c</fullName>
    <description>You now have the Support Level Mapping custom metadata type. Custom metadata types without records aren’t useful, though. Let’s add some data.</description>
    <label>Support Tier</label>
    <referenceTo>Support_Tier__mdt</referenceTo>
    <relationshipLabel>Support Level Mapping</relationshipLabel>
    <relationshipName>Support_Level_Mapping</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>