force-app/main/default/objects/Support_Level_Mapping__mdt/fields/Support_Tier_Name__c.field-meta.xml
<CustomField>
    <fullName>Support_Tier_Name__c</fullName>
    <description>From the Support Lever Mapping detail page, scroll to the Custom Fields section and click New.</description>
    <label>Support Tier Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>